--- a/src/elements/admin-header/admin-header.html
+++ b/src/elements/admin-header/admin-header.html
@@ -8,6 +8,14 @@
 <link rel="import" href="../../../bower_components/iron-icons/hardware-icons.html" />
 <link rel="import" href="../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html" />
+
+<!--
+`admin-header`
+header element for admin views
+
+@demo demo/index.html
+-->
+
 <dom-module id="admin-header">
 
   <template>
@@ -60,27 +68,26 @@
 
       },
       properties:{
-        page:{
+        //current page to display in the header passed in externally
+        page: {
           type:String
         },
-        patient:{
-          type:String
+        //media query check to see if size reduction necessary
+        query600: {
+          type:Boolean,
+          value:false
         },
-        home:{
-          type:String
-        },
-
-        firstname:{
-          type:String
-        },
-        lastname:{
-          type:String
+        //icon name to be displayed in the header passed in externally
+        icon: {
+          type: String
         }
       },
+
       observers:[
-        "editQuery(query600)"
+        "_editQuery(query600)"
       ],
-      editQuery:function(query600){
+
+      _editQuery:function(query600){
         if(query600){
           this.customStyle["--app-grid-columns"]="1";
           this.customStyle["--page-name-text-align"]="center";
@@ -90,8 +97,8 @@
           this.customStyle["--page-name-text-align"]="unset";
           this.updateStyles();
         };
-
       }
+
     });
 
   </script>
