--- a/src/elements/firebase-storage/firebase-storage-behavior.html
+++ b/src/elements/firebase-storage/firebase-storage-behavior.html
@@ -9,6 +9,7 @@ https://github.com/firebase/polymerfire/blob/master/LICENSE
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../bower_components/polymerfire/firebase-common-behavior.html">
 <link rel="import" href="../../../bower_components/polymerfire/firebase.html">
+
 <script>
   (function() {
     'use strict';
@@ -60,6 +61,7 @@ https://github.com/firebase/polymerfire/blob/master/LICENSE
         }
       },
       __computeStorage: function(app) {
+        console.log(app);
         return app ? app.storage() : null;
       },
       __computeRef: function(storage, path) {
